# CoC-ICG

./: .gitignore  README.md  agent_coc.py  agent_self_planning_icr.py  agent_self_planning_rag.py  coc_agent_vanilla_rag.py  code_indexer.py  correct_loc_percentage_calculator.py  correct_loc_percentage_calculator_v2.py  costs.txt  coverage.py  download_arcade.sh  preprocess_arcade.sh  prompts.py  prompts_coc.py  prompts_coc_v2.py  prompts_self_planning.py  prompts_sub_tasks.py  pyproject.toml  set_envs.sh  swe-bench.py  swe_agent_coc.py  swe_agent_coc_v2.py  swe_agent_code_parser.py  swe_agent_self_planning.py  swe_agent_sub_tasks.py  swe_agent_sub_tasks_no_rag.py  swe_agent_vanilla_rag.py  swe_bench.py
coverage_results/: agentless_lite_gpt-4o_agentless_coverage.json  agentless_verified_gpt-4o_agentless_coverage.json  coc_9_gpt-4o_coverage.json  coc_verified_1_o3-mini_coverage.json  coc_verified_2_gpt-4o_coverage.json  coc_verified_3_o3-mini_coverage.json  self_plan_1_gpt-4o_coverage.json  self_plan_2_o3-mini_coverage.json  self_plan_lite_2_gpt-4o_coverage.json
coverage_results/lite/: agentless_gpt-4o_agentless_coverage.json  agentless_lite_o3-mini_agentless_lite_greedy_coverage.json  coc_8_o3-mini_coverage.json  coc_9_gpt-4o_coverage.json  dars_agent_claude-3.5-sonnet-2.0_coverage.json  kodu_v1_kodu-claude-3-5-sonnet-20241022_coverage.json  self_plan_lite_1_o3-mini_coverage.json  self_plan_lite_2_gpt-4o_coverage.json  sub_task_baseline_run_5_o3-mini_coverage.json  sub_task_baseline_run_6_gpt-4o_coverage.json
coverage_results/verified/: agentless_gpt-4o_agentless_coverage.json  coc_verified_2_gpt-4o_coverage.json  (+8 more)
output/: prediction_vanilla_rag_gpt-4o-mini.json
prompts/: coc_prompts.py  self_planning_icr_prompts.py
temp_outputs/: o3-mini.coc_verified_3_fixed.json
utils/: count_tokens.py  dataset_utils.py  git_utils.py  model_utils.py  prompt_utils.py  repo_utils.py  response_utils.py
(+73 files in other folders)
