[project]
name = "coc-icg"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhishek Anand",email = "abhi1aa@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "datasets",
    "openai",
    "gitpython (>=3.1.44,<4.0.0)",
    "kaggle (>=1.6.17,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
